this is hero section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- tailwind cdn  -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- fontwosam  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <style>
+      .sora-font {
+  font-family: "Sora", serif;
+ }
+    </style>
 </head>
-<body>
-    <h1>the quick brown fox jumps over the lazy dog the quck brown fox jumps over the lazy dog </h1>
+
+<body class="max-w-8xl mx-auto lg:px-10 px-5">
+  <!-- header section start  -->
+  <header class="bg-gradient-to-t from-[#EFEBE3] to-white -500">
+    <nav class="lg:flex lg:justify-between mt-8 ">
+      <div class="flex justify-between">
+        <img class="h-16" src="./c2-assets/logo-header.png" alt="">
+        <i class="fa-solid fa-bars text-5xl text-green-700 lg:hidden"></i>
+
+      </div>
+
+      <ul class="lg:flex lg:gap-8  hidden">
+        <li class=""><a href=" " class="">Product</a></li>
+        <li class=""><a href="" class="">Services</a></li>
+        <li class=""><a href="" class="">Contact us</a></li>
+        <li class=""><a href="" class="">Admission</a></li>
+        <div><i class="fa-solid fa-magnifying-glass"></i></div>
+        <div><i class="fa-solid fa-cart-plus"></i></div>
+        <div class="ml-20">
+          
+          <button class="border-solid border-2 border-green-700 rounded-lg px-6 py-1 ">Login</button>
+        </div>
+        <div>
+          <button class="bg-green-700 px-5 py-2 rounded-lg text-white">Register</button>
+        </div>
+
+      </ul>
+    </nav>
+    <!-- hero section  -->
+     <section class=" text-center mt-40">
+      <div>
+        <h1 class="text-6xl font-bold"> Freshness <span class="text-green-600">You Can <br>
+          Count</span> On, Prices You’ll Love!</h1>
+          <p class="pt-9 text-xl text-gray-600">Shop your daily essentials at unbeatable prices. From fresh produce to pantry <br> staples, we’ve got you covered every day!</p>
+      </div>
+      <div><img class="mx-auto" src="./c2-assets/hero-vegetables.png" alt=""></div>
+     </section>
+  </header>
+
+
+
+
+  <!-- main section start  -->
+  <main></main>
+
+
+
+  <!-- footer section  -->
+  <footer></footer>
 </body>
+
 </html>
