--- a/index.html
+++ b/index.html
@@ -59,12 +59,41 @@
       <div><img class="mx-auto" src="./c2-assets/hero-vegetables.png" alt=""></div>
      </section>
   </header>
-
-
-
-
   <!-- main section start  -->
-  <main></main>
+  <main>
+    <div>
+      <h2 class="font-bold text-4xl lg:ml-80 mt-48
+       text-green-600">Services</h2>
+    </div>
+    <section class=" flex justify-center mt-7 lg:mt-32 lg:ml-12">
+
+      <!-- all card container section  -->
+      <div class="grid lg:grid-cols-3 grid-cols-1 gap-10 ">
+        <!-- first card  -->
+        <div class="bg-[#EFEBE3] w-96 p-8 rounded-xl">
+          <img class="mx-auto" src="./c2-assets/service.png" alt="">
+         <div class="text-center">
+          <h3 class="text-xl font-bold">24/7 Services </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+         </div>
+        </div>
+        <div class="bg-[#EFEBE3] w-96 p-8 rounded-xl">
+          <img class="mx-auto" src="./c2-assets/delivery.png" alt="">
+         <div class="text-center">
+          <h3 class="text-xl font-bold">Fast Delivery </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+         </div>
+        </div>
+        <div class="bg-[#EFEBE3] w-96 p-8 rounded-xl">
+          <img class="mx-auto" src="./c2-assets/healthy.png" alt="">
+         <div class="text-center">
+          <h3 class="text-xl font-bold">Healthy Products  </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+         </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 
 
