this is grid section

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       
       <div class="lg:flex">
         <!-- big card  -->
-        <div class="bg-gradient-to-b sm:mx-auto md:mx-auto from-[#43F833] to-white-500 p-5 rounded-2xl w-96">
+        <div class="bg-gradient-to-b sm:mx-auto md:mx-auto  from-[#43F833] to-white-500 p-5 rounded-2xl w-96">
           <div>
             <!-- text  -->
             <h2 class="text-3xl text-white font-bold p-3">30% off</h2>
@@ -123,91 +123,91 @@
         <!-- small cards  -->
         <div class="grid lg:grid-cols-3 grid-cols-2 gap-3 lg:gap-10 mb-20 lg:ml-24 md:mt-20 sm:mt-20">
           <!-- card  -->
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
             </div>
           </div>
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
             </div>
           </div>
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
             </div>
           </div>
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
             </div>
           </div>
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
             </div>
           </div>
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
             </div>
           </div>
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
             </div>
           </div>
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
             </div>
           </div>
-          <div class="flex bg-white  w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
-            <div class="ml-5 my-3">
+            <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
               <h3>$39.99</h3>
