this is our team member section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Nature's Platter</title>
+  <link rel="shortcut icon" href="./c2-assets/logo-header.png" type="image/x-icon">
   <!-- tailwind cdn  -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- fontwosam  -->
@@ -97,12 +98,12 @@
 
 
     <!-- second section or popular products section  -->
-     <div>
-        <h2 class="font-bold text-4xl lg:ml-80 mt-20
+    <div>
+      <h2 class="font-bold text-4xl lg:ml-80 mt-20
          text-green-600 mb-12 pt-20">Arrival & Offers</h2>
-      </div>
+    </div>
     <section class="mt-10 pt-40 bg-[#EFEBE3] flex justify-center pb-20">
-      
+
       <div class="lg:flex">
         <!-- big card  -->
         <div class="bg-gradient-to-b sm:mx-auto md:mx-auto  from-[#43F833] to-white-500 p-5 rounded-2xl w-96">
@@ -121,9 +122,9 @@
           </div>
         </div>
         <!-- small cards  -->
-        <div class="grid lg:grid-cols-3 grid-cols-2 gap-3 lg:gap-10 mb-20 lg:ml-24 md:mt-20 sm:mt-20">
+        <div class="grid lg:grid-cols-3 grid-cols-2 gap-3 lg:gap-10 mb-20 lg:ml-24 md:mt-20 mt-20">
           <!-- card  -->
-          <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
+          <div class="flex bg-white  lg:w-64 md:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
               <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
             </div>
@@ -135,7 +136,7 @@
           </div>
           <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
-              <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
+              <img class="w-20 bg-slate-400 rounded-xl  " src="./grid-img/vegetables-for-hair-loss.jpg.webp" alt="">
             </div>
             <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
@@ -145,7 +146,7 @@
           </div>
           <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
-              <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
+              <img class="w-20 bg-slate-400 rounded-xl  " src="./grid-img/325-Vegetable-Box-40.webp" alt="">
             </div>
             <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
@@ -155,7 +156,7 @@
           </div>
           <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
-              <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
+              <img class="w-20 bg-slate-400 rounded-xl  " src="./grid-img/image-asset.jpeg" alt="">
             </div>
             <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
@@ -165,7 +166,7 @@
           </div>
           <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
-              <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
+              <img class="w-20 bg-slate-400 rounded-xl  " src="./grid-img/325-Vegetable-Box-40.webp" alt="">
             </div>
             <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
@@ -175,7 +176,7 @@
           </div>
           <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
-              <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
+              <img class="w-20 bg-slate-400 rounded-xl  " src="./grid-img/purple-radish-malaga_0.jpg" alt="">
             </div>
             <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
@@ -185,7 +186,7 @@
           </div>
           <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
-              <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
+              <img class="w-20 bg-slate-400 rounded-xl  " src="./grid-img/vegetables-for-hair-loss.jpg.webp" alt="">
             </div>
             <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
@@ -195,7 +196,7 @@
           </div>
           <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
             <div class="my-3 mx-3">
-              <img class="w-20 bg-slate-400 rounded-xl  " src="./c2-assets/vegetable-removebg-preview (1).png" alt="">
+              <img class="w-20 bg-slate-400 rounded-xl  " src="./grid-img/Is-a-Carrot-a-Fruit-or-Vegetable.jpg" alt="">
             </div>
             <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
@@ -216,9 +217,132 @@
 
 
 
-          
+
         </div>
 
+    </section>
+    <!-- our tem member section  -->
+    <div>
+      <h2 class="font-bold text-4xl lg:ml-80 mt-20
+         text-green-600 mb-12 pt-20">Our team member </h2>
+    </div>
+    <section class="flex justify-center gap-5">
+      <!-- all tem member  -->
+      <div class="grid lg:grid-cols-4 gap-y-10 lg:gap-y-0 lg:gap-x-3">
+        <!-- first member  -->
+        <div class="w-80 h-5xl border-solid border-8 border-black-600 rounded-lg">
+          <!-- photo -->
+          <div>
+            <img src="./grid-img/man1.jpg" alt="">
+          </div>
+          <!-- text  -->
+          <div class="p-2 text-center">
+            <h1 class="font-bold text-xl">this is nabel</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem dicta placeat voluptate fugiat hic
+              culpa harum veniam autem perferendis?</p>
+            <button class="bg-black px-5 py-2 rounded-lg my-3 text-white">Read more</button>
+          </div>
+
+          <div>
+
+          </div>
+        </div>
+        <div class="w-80 h-5xl border-solid border-8 border-black-600 rounded-lg">
+          <!-- photo -->
+          <div>
+            <img src="./grid-img/man2.jpg" alt="">
+          </div>
+          <!-- text  -->
+          <div class="p-2 text-center bg-green-100">
+            <h1 class="font-bold text-xl">this is nabel</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem dicta placeat voluptate fugiat hic
+              culpa harum veniam autem perferendis?</p>
+            <button class="bg-black px-5 py-2 rounded-lg my-3 text-white">Read more</button>
+          </div>
+
+          <div>
+
+          </div>
+        </div>
+        <div class="w-80 h-5xl border-solid border-8 border-black-600 rounded-lg">
+          <!-- photo -->
+          <div>
+            <img src="./grid-img/man3.avif" alt="">
+          </div>
+          <!-- text  -->
+          <div class="p-2 text-center bg-black-600">
+            <h1 class="font-bold text-xl">this is nabel</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem dicta placeat voluptate fugiat hic
+              culpa harum veniam autem perferendis?</p>
+            <button class="bg-black px-5 py-2 rounded-lg my-3 text-white">Read more</button>
+          </div>
+
+          <div>
+
+          </div>
+        </div>
+        <div class="w-80 h-5xl border-solid border-8 border-black-600 rounded-lg">
+          <!-- photo -->
+          <div>
+            <img src="./grid-img/man4.jpg" alt="">
+          </div>
+          <!-- text  -->
+          <div class="p-2 text-center bg-green-100">
+            <h1 class="font-bold text-xl">this is nabel</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem dicta placeat voluptate fugiat hic
+              culpa harum veniam autem perferendis?</p>
+            <button class="bg-black px-5 py-2 rounded-lg my-3 text-white">Read more</button>
+          </div>
+
+          <div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- Arrival & Offers section  -->
+    <div>
+      <h2 class="font-bold text-4xl lg:ml-80 mt-20
+       text-green-600 mb-12 pt-20">Arrival & Offers</h2>
+    </div>
+    <section class="flex justify-center">
+      <!-- card container  -->
+      <div class=" lg:flex gap-28">
+        <!-- first card  -->
+        <div class="flex max-w-5xl bg-[#115414] rounded-3xl h-80 text-white  p-10 justify-between">
+          <!-- left text  -->
+          <div>
+            <img src="./c2-assets/dawat-logo.png" alt="">
+            <div class="h-12 lg:w-80  mt-8 bg-green-500 mb-10 rounded-lg">
+              <h2 class="text-center pt-3"> Cook Exotic Dishes</h2>
+            </div>
+            <h1 class="text-4xl">UP to <span class="font-bold">20% OFF</span></h1>
+          </div>
+          <!-- right img  -->
+          <div>
+            <img class="h-64" src="./c2-assets/dawat-mock-up.png" alt="">
+          </div>
+        </div>
+
+        <!-- second card  -->
+        <div
+          class="flex max-w-xl mt-11 md:mt-20 lg:mt-0 bg-[#102861] h-80 rounded-3xl text-white  p-10 justify-between">
+          <!-- left text  -->
+          <div>
+            <img class="h-32" src="./c2-assets/india-gate-logo.png" alt="">
+            <div class="h-12 w-52  mt-3 bg-[#2A4D97] mb-4 rounded-lg">
+              <h2 class="text-center pt-3"> Cook Exotic Dishes</h2>
+            </div>
+            <h1 class="text-4xl">UP to <span class="font-bold">20% OFF</span></h1>
+          </div>
+          <!-- right img  -->
+          <div>
+            <img class="h-64" src="./c2-assets/india-gate-mock-up.png" alt="">
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
