Get Grocery News section

--- a/index.html
+++ b/index.html
@@ -344,12 +344,33 @@
         </div>
       </div>
     </section>
+
+    <!-- Get Grocery News section  -->
+    <section class="lg:flex justify-center  mb-40 bg-[#EFEBE3]  rounded-3xl  mt-52 lg:mx-72 ">
+      <!-- left photo -->
+    <div class="lg:flex justify-center gap-36">
+      <div>
+        <img class="h-72" src="./c2-assets/vegetable-busket.png" alt="">
+      </div>
+      <!-- right text  -->
+      <div class="my-20  lg:text-justify text-center">
+        <h1 class="text-2xl font-bold py-3">Get Grocery News!</h1>
+        <p>Exclusive training tips, ticks, product deals and more.</p>
+        <input class="my-4 p-3 lg:w-96 rounded-md lg:bg-none bg-white " placeholder="Enter email...." type="text">
+       <div class="lg:py-0 py-10">
+        <button class="bg-green-700 px-5 py-2 rounded-lg text-white ">Register</button>
+       </div>
+      </div>
+    </div>
+    </section>
   </main>
 
 
 
   <!-- footer section  -->
-  <footer></footer>
+  <footer class="bg-[#179800]">
+
+  </footer>
 </body>
 
 </html>
