--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
   </style>
 </head>
 
-<body class="max-w-8xl mx-auto lg:px-10 px-5">
+<body class="mx-auto lg:px-10 px-5">
   <!-- header section start  -->
   <header class="bg-gradient-to-t from-[#EFEBE3] to-white -500">
+
+    <!-- nav section start  -->
     <nav class="lg:flex lg:justify-between mt-8 ">
       <div class="flex justify-between">
         <img class="h-16" src="./c2-assets/logo-header.png" alt="">
-        <i class="fa-solid fa-bars text-5xl text-green-700 lg:hidden"></i>
+        <i class="fa-solid fa-bars text-3xl text-green-700 lg:hidden"></i>
 
       </div>
 
@@ -50,7 +52,7 @@
 
       </ul>
     </nav>
-    <!-- hero section  -->
+    <!-- hero section start  -->
     <section class=" text-center mt-40">
       <div>
         <h1 class="text-6xl font-bold"> Freshness <span class="text-green-600">You Can <br>
@@ -61,8 +63,10 @@
       <div><img class="mx-auto" src="./c2-assets/hero-vegetables.png" alt=""></div>
     </section>
   </header>
+
   <!-- main section start  -->
   <main>
+    <!-- service section start  -->
     <div>
       <h2 class="font-bold text-4xl lg:ml-80 mt-48
        text-green-600">Services</h2>
@@ -76,28 +80,29 @@
           <img class="mx-auto" src="./c2-assets/service.png" alt="">
           <div class="text-center">
             <h3 class="text-xl font-bold">24/7 Services </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            <p> the galleries include items that are designed to coordinate with the overall look of your document. You can use these galleries to insert tables, headers, footers, lists, cover pages, and other document building blocks. When you create pictures, charts, ok.
+              </p>
           </div>
         </div>
         <div class="bg-[#EFEBE3] w-96 p-8 rounded-xl">
           <img class="mx-auto" src="./c2-assets/delivery.png" alt="">
           <div class="text-center">
             <h3 class="text-xl font-bold">Fast Delivery </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            <p> Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. You can use these galleries to insert tables, headers, footers, lists, cover pages, and other document building blocks. When you create pictures, charts, ok.</p>
           </div>
         </div>
         <div class="bg-[#EFEBE3] w-96 p-8 rounded-xl">
           <img class="mx-auto" src="./c2-assets/healthy.png" alt="">
           <div class="text-center">
             <h3 class="text-xl font-bold">Healthy Products </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. You can use these galleries to insert tables, headers, footers, lists, cover pages, and other document building blocks. When you create pictures, charts, ok.</p>
           </div>
         </div>
       </div>
     </section>
 
 
-    <!-- second section or popular products section  -->
+    <!-- second section or popular products section start -->
     <div>
       <h2 class="font-bold text-4xl lg:ml-80 mt-20
          text-green-600 mb-12 pt-20">Arrival & Offers</h2>
@@ -110,8 +115,8 @@
           <div>
             <!-- text  -->
             <h2 class="text-3xl text-white font-bold p-3">30% off</h2>
-            <p class="text-lg">Lorem ipsum dolor sit amet,
-              sed ratione magni, sint provident incidunt quae.</p>
+            <p class="text-lg">Getting the  résumé  tips to help you get started. To replace any tip text with your own, just click it and start typing.
+              </p>
             <div class="p-3">
               <button class="bg-white px-5 py-2 rounded-lg ">Buy Now</button>
             </div>
@@ -131,7 +136,7 @@
             <div class="lg:ml-5 my-3">
               <h2><i class="fa-solid fa-star text-[#ffa034]"></i> 4.5</h2>
               <h1>Onion 1 KG</h1>
-              <h3>$39.99</h3>
+              <h3>$40.90</h3>
             </div>
           </div>
           <div class="flex bg-white  lg:w-64 h-24 rounded-lg ">
@@ -221,7 +226,7 @@
         </div>
 
     </section>
-    <!-- our tem member section  -->
+    <!-- our tem member section start -->
     <div>
       <h2 class="font-bold text-4xl lg:ml-80 mt-20
          text-green-600 mb-12 pt-20">Our team member </h2>
@@ -237,9 +242,10 @@
           </div>
           <!-- text  -->
           <div class="p-2 text-center">
-            <h1 class="font-bold text-xl">this is nabel</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem dicta placeat voluptate fugiat hic
-              culpa harum veniam autem perferendis?</p>
+            <h1 class="font-bold text-xl">This is nabel</h1>
+            <p>Getting the perfect job might be challenging, but a great-looking résumé doesn’t have to be! We’ve provided a few quick tips to help you get started. To replace any tip text with your own, just click it and start typing.
+              Need another experience or education entry? You got it. Just click in the sample entries below and then click the plus sign that appears. Looking for a matching cover letter? All you had to do was .
+              </p>
             <button class="bg-black px-5 py-2 rounded-lg my-3 text-white">Read more</button>
           </div>
 
@@ -254,9 +260,10 @@
           </div>
           <!-- text  -->
           <div class="p-2 text-center bg-green-100">
-            <h1 class="font-bold text-xl">this is nabel</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem dicta placeat voluptate fugiat hic
-              culpa harum veniam autem perferendis?</p>
+            <h1 class="font-bold text-xl">This rakib</h1>
+            <p> Challenging, but a great-looking résumé doesn’t have to be! We’ve provided a few quick tips to help you get started. To replace any tip text with your own, just click it and start typing.
+              Need another experience or education entry? You got it. Just click in the sample entries below and then click the plus sign that appears. Looking for a matching cover letter? All you had to do was ask! On the Insert tab, click Cover .
+              </p>
             <button class="bg-black px-5 py-2 rounded-lg my-3 text-white">Read more</button>
           </div>
 
@@ -271,9 +278,10 @@
           </div>
           <!-- text  -->
           <div class="p-2 text-center bg-black-600">
-            <h1 class="font-bold text-xl">this is nabel</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem dicta placeat voluptate fugiat hic
-              culpa harum veniam autem perferendis?</p>
+            <h1 class="font-bold text-xl">This is faruk</h1>
+            <p>The perfect job might be challenging, but a great-looking résumé doesn’t have to be! We’ve provided a few quick tips to help you get started. To replace any tip text with your own, just click it and start typing.
+              Need another experience or education entry? You got it. Just click in the sample entries below and then click the plus sign that appears. Looking for a matching cover letter? All you had to do was ask! On the Insert tab.
+              </p>
             <button class="bg-black px-5 py-2 rounded-lg my-3 text-white">Read more</button>
           </div>
 
@@ -288,9 +296,10 @@
           </div>
           <!-- text  -->
           <div class="p-2 text-center bg-green-100">
-            <h1 class="font-bold text-xl">this is nabel</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem dicta placeat voluptate fugiat hic
-              culpa harum veniam autem perferendis?</p>
+            <h1 class="font-bold text-xl">this is tamim</h1>
+            <p> Might be challenging, but a great-looking résumé doesn’t have to be! We’ve provided a few quick tips to help you get started. To replace any tip text with your own, just click it and start typing.
+              Need another experience or education entry?  got it. Just click in the sample entries below and then click the plus sign that appears. Looking for a matching cover letter? All you had to do .
+              </p>
             <button class="bg-black px-5 py-2 rounded-lg my-3 text-white">Read more</button>
           </div>
 
@@ -346,30 +355,53 @@
     </section>
 
     <!-- Get Grocery News section  -->
-    <section class="lg:flex justify-center  mb-40 bg-[#EFEBE3]  rounded-3xl  mt-52 lg:mx-72 ">
+    <section class="lg:-mb-56 -mb-72 opacity-95 lg:flex justify-center bg-[#EFEBE3]  rounded-3xl  mt-52 lg:mx-72 ">
       <!-- left photo -->
-    <div class="lg:flex justify-center gap-36">
-      <div>
-        <img class="h-72" src="./c2-assets/vegetable-busket.png" alt="">
+      <div class="lg:flex justify-center gap-36">
+        <div class="flex justify-center">
+          <img class="h-72" src="./c2-assets/vegetable-busket.png" alt="">
+        </div>
+        <!-- right text  -->
+        <div class="my-20  lg:text-justify text-center">
+          <h1 class="text-2xl font-bold py-3">Get Grocery News!</h1>
+          <p>Exclusive training tips, ticks, product deals and more.</p>
+          <input class="my-4 p-3 lg:w-96 rounded-md lg:bg-none bg-white " placeholder="Enter email...." type="text">
+          <div class="lg:py-0 py-10">
+            <button class="bg-green-700 px-5 py-2 rounded-lg text-white ">Register</button>
+          </div>
+        </div>
       </div>
-      <!-- right text  -->
-      <div class="my-20  lg:text-justify text-center">
-        <h1 class="text-2xl font-bold py-3">Get Grocery News!</h1>
-        <p>Exclusive training tips, ticks, product deals and more.</p>
-        <input class="my-4 p-3 lg:w-96 rounded-md lg:bg-none bg-white " placeholder="Enter email...." type="text">
-       <div class="lg:py-0 py-10">
-        <button class="bg-green-700 px-5 py-2 rounded-lg text-white ">Register</button>
-       </div>
-      </div>
-    </div>
     </section>
   </main>
 
 
 
   <!-- footer section  -->
-  <footer class="bg-[#179800]">
+  <footer class="bg-[#179800] px-5">
+    <div class="grid lg:grid-cols-3 pt-80 lg:px-72 lg:gap-40 text-white">
+      <!-- 1st  -->
+      <div>
+        <img src="./c2-assets/logo-footer.png" alt="">
+        <p class="py-5"> Discover a world of treats, toys, and <br> essentials handpicked for your furry friends</p>
+      </div>
+      <!-- 2nd  -->
+      <div class="lg:ml-40 ">
+        <h1>Product</h1>
+        <h1 class="py-5">Services</h1>
+        <h1>Contact</h1>
+      </div>
+      <!-- 3rd  -->
+      <div class="lg:ml-32 py-12">
+        <h2 class="py-5">Follow Us</h2>
+        <div class="text-3xl">
+          <i class="fa-brands fa-facebook "></i>
+          <i class="fa-brands fa-instagram lg:ml-2 ml-6"></i>
+          <i class="fa-brands fa-linkedin lg:ml-2 ml-6"></i>
+          <i class="fa-brands fa-youtube lg:ml-2 ml-6"></i>
+        </div>
+      </div>
 
+    </div>
   </footer>
 </body>
 
