--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 
-<body class="mx-auto lg:px-10 px-5">
+<body class="mx-auto lg:px-10 p-1">
   <!-- header section start  -->
   <header class="bg-gradient-to-t from-[#EFEBE3] to-white -500">
 
@@ -54,9 +54,12 @@
     </nav>
     <!-- hero section start  -->
     <section class=" text-center mt-40">
+      <button class="animate-bounce bg-gradient-to-r from-[#F96E2A] to-[#FCC737] pb-2  text-white font-bold text-2xl px-2 py-2 rounded-xl">
+      Animation button
+      </button>
       <div>
         <h1 class="text-6xl font-bold"> Freshness <span class="text-green-600">You Can <br>
-            Count</span> On, Prices You’ll Love!</h1>
+            Count</span> On, Prices You’ll Love!  </h1>
         <p class="pt-9 text-xl text-gray-600">Shop your daily essentials at unbeatable prices. From fresh produce to
           pantry <br> staples, we’ve got you covered every day!</p>
       </div>
